--- a/tpls/CMakeLists.txt
+++ b/tpls/CMakeLists.txt
@@ -14,21 +14,21 @@ add_subdirectory(metis)
 
 find_package(Git QUIET)
 
-if(GIT_FOUND AND EXISTS "${CMAKE_SOURCE_DIR}/.git")
-  execute_process(COMMAND ${GIT_EXECUTABLE}
-                          submodule
-                          update
-                          --init
-                          --recursive
-                  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-                  RESULT_VARIABLE GIT_SUBMOD_RESULT)
-  if(NOT GIT_SUBMOD_RESULT EQUAL "0")
-    message(
-      FATAL_ERROR
-        "git submodule update --init failed with ${GIT_SUBMOD_RESULT}, please checkout submodules"
-      )
-  endif()
-endif()
+#if(GIT_FOUND AND EXISTS "${CMAKE_SOURCE_DIR}/.git")
+#  execute_process(COMMAND ${GIT_EXECUTABLE}
+#                          submodule
+#                          update
+#                          --init
+#                          --recursive
+#                  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+#                  RESULT_VARIABLE GIT_SUBMOD_RESULT)
+#  if(NOT GIT_SUBMOD_RESULT EQUAL "0")
+#    message(
+#      FATAL_ERROR
+#        "git submodule update --init failed with ${GIT_SUBMOD_RESULT}, please checkout submodules"
+#      )
+#  endif()
+#endif()
 
 if(EXATN_BUILD_TESTS)
   enable_testing()
